Make j and k switch visual lines instead of numbered lines, game changer when lines are wrapped

--- a/init.org
+++ b/init.org
@@ -346,7 +346,9 @@ Vim keybinds and goodness in emacs
   :config
   (evil-mode 1)
   (evil-set-initial-state 'dashboard-mode 'normal)
-  (evil-set-undo-system 'undo-tree))
+  (evil-set-undo-system 'undo-tree)
+  (define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
+  (define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line))
 #+end_src
 
 *** Org mode integration with evil
@@ -995,6 +997,7 @@ To read / sync email in emacs. Using this only on home computers.
   (setq mu4e-context-policy 'pick-first)
   (require 'org-mu4e)
 
+;; do not put a trashed flag on messages moved to deleted because then mu4e will delete them forever
   (setf (alist-get 'trash mu4e-marks)
         (list :char '("d" . "▼")
               :prompt "dtrash"
@@ -1007,8 +1010,6 @@ To read / sync email in emacs. Using this only on home computers.
                       (mu4e~proc-move docid (mu4e~mark-check-target target) "-N"))))
 
   (mu4e t))
-
-;; do not put a trashed flag on messages moved to deleted because then mu4e will delete them forever
 #+end_src
 
 Alerts for emails
