Better pomodoro sounds + lsp-metals

--- a/init.org
+++ b/init.org
@@ -495,14 +495,14 @@ The notes (zettelkasten) god
   (setq org-roam-dailies-capture-templates
     '(("m" "meeting" entry
        #'org-roam-capture--get-point
-       "* %?"
+       "* %<%H:%M> %?"
        :file-name "daily/%<%Y-%m-%d>"
        :head "#+title: %<%Y-%m-%d>\n"
        :olp ("Meeting notes"))
 
       ("j" "journal" entry
        #'org-roam-capture--get-point
-       "* %?"
+       "* %<%H:%M> %?"
        :file-name "daily/%<%Y-%m-%d>"
        :head "#+title: %<%Y-%m-%d>\n"
        :olp ("Journal")))))
@@ -589,7 +589,11 @@ For your journaling needs.
 *** Pomodoro
 #+begin_src elisp
 (use-package org-pomodoro
-  :straight t)
+  :straight t
+  :config
+  (setq org-pomodoro-finished-sound (concat user-emacs-directory "/eraser.mp3"))
+  (setq org-pomodoro-short-break-sound (concat user-emacs-directory "/eraser.mp3"))
+  (setq org-pomodoro-long-break-sound (concat user-emacs-directory "/eraser.mp3")))
 #+end_src
 ** Magit
 The git supercharge
@@ -748,6 +752,7 @@ For your general language needs.
   (rust-mode     . lsp)
   (ruby-mode     . lsp)
   (gdscript-mode . lsp)
+  (scala-mode    . lsp)
   :commands lsp)
 
 (use-package lsp-ui 
@@ -836,6 +841,10 @@ For those pesky shaders.
   :mode "\\.s\\(cala\\|bt\\)$"
   :config
   (load-file (concat user-emacs-directory "/lisp/ob-scala.el"))) ;; for org babel evaluating of scala code blocks
+
+(use-package lsp-metals
+  :straight t
+  :config (setq lsp-metals-treeview-show-when-views-received t))
 #+end_src
 
 *** GDScript
