Cider, capture templates, keybindings, and more

--- a/init.org
+++ b/init.org
@@ -26,6 +26,8 @@
     - [[#storing-links][Storing links]]
     - [[#which-key][Which-key]]
     - [[#undo][Undo]]
+    - [[#buffer-display][Buffer display]]
+    - [[#delete-unnecessary-whitespace][Delete unnecessary whitespace]]
   - [[#keybindings][Keybindings]]
   - [[#margins][Margins]]
   - [[#modeline][Modeline]]
@@ -45,6 +47,8 @@
     - [[#org-babel][Org babel]]
     - [[#notifications][Notifications]]
     - [[#pomodoro][Pomodoro]]
+    - [[#embed-yt-videos][Embed YT videos]]
+    - [[#kanban][Kanban]]
   - [[#magit][Magit]]
   - [[#helm][Helm]]
   - [[#counsel][Counsel]]
@@ -63,6 +67,7 @@
     - [[#scala][Scala]]
     - [[#gdscript][GDScript]]
     - [[#python][Python]]
+    - [[#clojure][Clojure]]
   - [[#projectile][Projectile]]
   - [[#parens][Parens]]
   - [[#flycheck][Flycheck]]
@@ -72,6 +77,8 @@
   - [[#better-link-opener][Better link opener]]
   - [[#email][Email]]
   - [[#persistent-scratch][Persistent scratch]]
+  - [[#esup][Esup]]
+  - [[#emms][EMMS]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -191,7 +198,7 @@ Ok I like the doom emacs themes
 (use-package evil-nerd-commenter
   :straight t
   :config
-  (evilnc-default-hotkeys))  
+  (evilnc-default-hotkeys))
 #+end_src
 *** Command log mode
 Show command history in sidebar. Looks slick.
@@ -219,13 +226,33 @@ Showing a popup for key combinations that follow the pressed key (like in Spacem
   :init
   (global-undo-tree-mode))
 #+end_src
+*** Buffer display
+When running ~display-buffer~, will show the ~*Emacs Log*~ buffer on the right side of the window
+#+begin_src elisp
+(setq display-buffer-alist
+  `(;; Messages, errors, processes, Calendar in the bottom side window
+     (,(rx bos (or "*Emacs Log*"))  ; interaction log *Emacs Log*
+       (display-buffer-reuse-window display-buffer-in-side-window)
+       (side . right)
+       (reusable-frames . visible)
+       (window-height . 0.45))
+       ;; Let `display-buffer' reuse visible frames for all buffers. This must
+       ;; be the last entry in `display-buffer-alist', because it overrides any
+       ;; previous entry with more actions.
+     ("." nil (reusable-frames . visible))))
+#+end_src
+*** Delete unnecessary whitespace
+#+begin_src elisp
+(use-package simple
+  :hook (before-save . delete-trailing-whitespace))
+#+end_src
 ** Keybindings
 Using ~general.el~ to define a leader key and various bindings with it. In modes (e.g. insert mode and emacs mode) where space is not applicable, it uses ctrl + space.
 
 Make escape quit prompts.
 #+begin_src elisp
 (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
-#+end_src 
+#+end_src
 
 #+begin_src elisp
 (setq user-init-file-org "~/.emacs.d/init.org")
@@ -233,6 +260,7 @@ Make escape quit prompts.
 (setq gtd-file "~/Nextcloud/Orgzly/gtd.org")
 (setq gtd-someday-file "~/Nextcloud/Orgzly/someday.org")
 (setq gtd-tickler-file "~/Nextcloud/Orgzly/tickler.org")
+(setq daily-file "~/Nextcloud/Orgzly/daily.org")
 (setq tech-notebook-file "~/Nextcloud/org/tech_notebook.org")
 (setq work-file "~/Nextcloud/org/work/work.org")
 
@@ -270,7 +298,7 @@ Make escape quit prompts.
     "p"  '(:ignore t :which-key "file")
     "pf"  (list (lambda () (interactive) (find-file user-init-file-org)) :which-key "config")
 
-    "e" 'mu4e
+    "e"  'mu4e
 
     "g"  '(:ignore t :which-key "gtd")
     "gi"  (list (lambda () (interactive) (find-file gtd-inbox-file))   :which-key "inbox")
@@ -278,12 +306,17 @@ Make escape quit prompts.
     "gs"  (list (lambda () (interactive) (find-file gtd-someday-file)) :which-key "someday")
     "gt"  (list (lambda () (interactive) (find-file gtd-tickler-file)) :which-key "tickler")
 
+    "fd"  (list (lambda () (interactive) (find-file daily-file)) :which-key "daily")
+
     "fw"  (list (lambda () (interactive) (find-file work-file)) :which-key "work")
 
-    "o"  '(:ignore t :which-key "org")
-    "oc" 'org-capture
-    "oa" 'org-agenda
-    "op" 'org-pomodoro
+    "o"   '(:ignore t :which-key "org")
+    "oc"  'org-capture
+    "oa"  'org-agenda
+    "op"  'org-pomodoro
+    "ok"  '(:ignore t :which-key "kanban")
+    "oki" 'org-kanban/initialize-at-end
+    "oks" 'org-kanban/shift
 
     "ot" '(:ignore t :which-key "timestamp")
     "otu" 'org-timestamp-up-day
@@ -301,7 +334,15 @@ Make escape quit prompts.
     "wk" 'evil-window-up
     "wj" 'evil-window-down
 
-    "hd" 'howdoyou-query))
+    "hd" 'howdoyou-query
+
+    "x"   '(:ignore t :which-key "buffer")
+    "xk"  'kill-buffer
+    "xs"  '(:ignore t :which-key "split-window")
+    "xsr" 'split-window-right
+    "xsb" 'split-window-below
+
+    "ie"  'emojify-insert-emoji))
 #+end_src
 ** Margins
 #+begin_src elisp
@@ -388,7 +429,7 @@ Installing and configuring org-mode:
    (e.g. using <s TAB for inserting code blocks)
 2. Add some bindings to ~org-agenda~ for day, week view, clocking in and out, add org agenda files.
 3. Set refile targets to my various GTD files
-4. Set capture templates for ~inbox~ and ~tickler~ GTD entries
+4. Set capture templates
 5. Set todo keywords
 6. Indent, fold org files by default
 
@@ -402,8 +443,6 @@ Installing and configuring org-mode:
   :hook
   (org-mode . nimor/org-mode-setup)
   :config
-  (require 'org-tempo)
-
   ;; make org-agenda respect evil
   (evil-set-initial-state 'org-agenda-mode 'normal)
 
@@ -414,11 +453,12 @@ Installing and configuring org-mode:
     "I"  'org-agenda-clock-in
     "O"  'org-agenda-clock-out)
 
-  ;; files that org-agenda will read from 
+  ;; files that org-agenda will read from
   (setq org-agenda-files
   '("~/Nextcloud/Orgzly/gtd.org"
     "~/Nextcloud/Orgzly/tickler.org"
     "~/Nextcloud/Orgzly/inbox.org"
+    "~/Nextcloud/Orgzly/daily.org"
     "~/Nextcloud/org/work/work.org"))
 
   ;; org-agenda custom views
@@ -428,9 +468,9 @@ Installing and configuring org-mode:
 
   ;; files to refile to
   (setq org-refile-targets
-    '(("~/Nextcloud/Orgzly/gtd.org"     :maxlevel . 3)
-      ("~/Nextcloud/Orgzly/someday.org" :level    . 1)
-      ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 2)))
+    '(("~/Nextcloud/Orgzly/gtd.org"     :maxlevel . 9)
+      ("~/Nextcloud/Orgzly/someday.org" :maxlevel . 9)
+      ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 9)))
 
   ;; quick templates for org files
   (setq org-capture-templates
@@ -442,10 +482,19 @@ Installing and configuring org-mode:
       "* TODO %i%? \n SCHEDULED: %T")
       ("M" "Mail Todo with link" entry
       (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-      "* TODO %i%? \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")))
+      "* TODO %i%? \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
+      ("W" "Finnish word of the day" entry
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      "* TODO Word of the day - %t \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
+      ("d" "Todo [daily]" entry
+        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
+        "* TODO %i%? \n SCHEDULED: %t")
+      ("D" "Todo with link [daily]" entry
+        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
+        "* TODO %a \n SCHEDULED: %t")))
 
   ;; TODO keywords that I use - the ones after the | are the done states
-  (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+  (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "IN PROGRESS(p)" "|" "DONE(d)" "CANCELLED(c)")))
 
   ;; Clocking settings
   (setq org-pretty-entities t)
@@ -458,7 +507,28 @@ Installing and configuring org-mode:
   (setq org-agenda-tags-column 0)
   (setq org-src-fontify-natively t
         org-src-preserve-indentation t ;; do not put two spaces on the left
-        org-src-tab-acts-natively t))
+        org-src-tab-acts-natively t)
+
+  (setq yt-iframe-format
+    ;; You may want to change your width and height.
+    (concat "<iframe width=\"440\""
+            " height=\"335\""
+            " src=\"https://www.youtube.com/embed/%s\""
+            " frameborder=\"0\""
+            " allowfullscreen>%s</iframe>"))
+
+  (org-add-link-type
+   "yt"
+   (lambda (handle)
+     (browse-url
+      (concat "https://www.youtube.com/embed/"
+              handle)))
+   (lambda (path desc backend)
+     (cl-case backend
+       (html (format yt-iframe-format
+                   path (or desc "")))
+       (latex (format "\href{%s}{%s}"
+                    path (or desc "video")))))))
 #+end_src
 
 Like org bullets, but supercharged?
@@ -470,6 +540,13 @@ Like org bullets, but supercharged?
   :hook (org-mode . org-superstar-mode))
 #+end_src
 
+For inserting code snippets (with ~<s~ for example)
+
+#+begin_src elisp
+(use-package org-tempo
+  :after org)
+#+end_src
+
 Disable line numbers in org-mode
 #+begin_src elisp
 (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode 0)))
@@ -479,7 +556,8 @@ The notes (zettelkasten) god
 
 #+begin_src elisp
 (use-package org-roam
-  :straight t
+  :straight
+  (:host github :repo "jethrokuan/org-roam" :branch "master")
   :hook
   (after-init . org-roam-mode)
   :custom
@@ -500,12 +578,12 @@ The notes (zettelkasten) god
   (setq org-roam-dailies-directory "daily/")
 
   (setq org-roam-dailies-capture-templates
-    '(("m" "meeting" entry
+    '(("d" "daily" entry
        #'org-roam-capture--get-point
        "* %<%H:%M> %?"
        :file-name "daily/%<%Y-%m-%d>"
        :head "#+title: %<%Y-%m-%d>\n"
-       :olp ("Meeting notes"))
+       :olp ("Daily notes"))
 
       ("j" "journal" entry
        #'org-roam-capture--get-point
@@ -552,8 +630,9 @@ Table of contents on save for org files, it's awesome
 #+begin_src elisp
 (use-package toc-org
   :straight t
+  :after org
   :hook
-  (org-mode . toc-org-mode))
+  (org-mode . toc-org-enable))
 #+end_src
 *** Org journal
 For your journaling needs.
@@ -561,6 +640,7 @@ For your journaling needs.
 ;; TODO Remove this as it's in org roam now
 (use-package org-journal
   :straight t
+  :after org
   :config
   (setq org-journal-dir "~/Documents/journal")
   (setq org-journal-date-format "%A, %d %B %Y")
@@ -570,6 +650,8 @@ For your journaling needs.
 *** Org babel
 #+begin_src elisp
 (use-package ob
+  :defer t
+  :after org
   :config
   (org-babel-do-load-languages
     'org-babel-load-languages
@@ -581,6 +663,7 @@ For your journaling needs.
 #+begin_src elisp
 (use-package alert
   :straight t
+  :defer t
   :config
   (setq alert-default-style
     (if (eq system-type 'gnu/linux)
@@ -589,6 +672,7 @@ For your journaling needs.
 
 (use-package org-wild-notifier
   :straight t
+  :after org
   :config
   (org-wild-notifier-mode 1)
   (setq org-wild-notifier-alert-time '(10 0)))
@@ -597,17 +681,30 @@ For your journaling needs.
 #+begin_src elisp
 (use-package org-pomodoro
   :straight t
+  :after org
   :config
   (setq org-pomodoro-finished-sound (concat user-emacs-directory "/eraser.mp3"))
   (setq org-pomodoro-short-break-sound (concat user-emacs-directory "/eraser.mp3"))
   (setq org-pomodoro-long-break-sound (concat user-emacs-directory "/eraser.mp3")))
+#+end_src
+*** Embed YT videos
+Well, in HTML exports
+Creating a new type of org mode link
+#+begin_src elisp
+#+end_src
+*** Kanban
+#+begin_src elisp
+(use-package org-kanban
+  :straight t
+  :after org)
 #+end_src
 ** Magit
 The git supercharge
 
 #+begin_src elisp
 (use-package magit
-  :straight t)
+  :straight t
+  :defer t)
 #+end_src
 
 Something weird with ~emacsclient~ being installed with nix and magit not finding it when not started from a terminal (not sure if this is needed tbh)
@@ -709,24 +806,25 @@ Complete all the things!
   :hook (lua-mode my-lua-mode-company-init))
 #+end_src
 ** Snippets
+Don't have a use for this at the moment really, it's only making my emacs startup slower and I'm not even using it. Commenting it out for now.
 #+begin_src elisp
-(use-package yasnippet
-  :straight t
-  :demand t
-  :custom
-  (yas-also-auto-indent-first-line t)
-  (yas-also-indent-empty-lines t)
-  :config
-  (yas-global-mode t))
+;; (use-package yasnippet
+;;   :straight t
+;;   :custom
+;;   (yas-also-auto-indent-first-line t)
+;;   (yas-also-indent-empty-lines t)
+;;   :config
+;;   (yas-global-mode t))
 
-(use-package yasnippet-snippets
-  :straight t)
+;; (use-package yasnippet-snippets
+;;   :straight t)
 #+end_src
 ** How-do-you
 Your stack overflow and friends inside emacs (and the results are org files!)
 #+begin_src elisp
 (use-package howdoyou
-  :straight t)
+  :straight t
+  :defer t)
 #+end_src
 ** Language-specific
 *** Web-mode
@@ -763,7 +861,7 @@ For your general language needs.
   (scala-mode    . lsp)
   :commands lsp)
 
-(use-package lsp-ui 
+(use-package lsp-ui
   :straight t
   :commands lsp-ui-mode)
 
@@ -852,6 +950,7 @@ For those pesky shaders.
 
 (use-package lsp-metals
   :straight t
+  :defer t
   :config (setq lsp-metals-treeview-show-when-views-received t))
 #+end_src
 
@@ -863,24 +962,31 @@ For those pesky shaders.
   (gdscript-mode
      :type git
      :host github
-     :repo "GDQuest/emacs-gdscript-mode"))
+     :repo "GDQuest/emacs-gdscript-mode")
+  :defer t)
 #+end_src
 *** Python
 #+begin_src elisp
 (use-package elpy
   :straight t
+  :defer t
   :init
-  (elpy-enable))
+  (advice-add 'python-mode :before 'elpy-enable))
 
 (nimor/language-leader-def
   "p" '(:ignore t :which-key "python")
   "pf" 'elpy-autopep8-fix-code)
 #+end_src
+*** Clojure
+#+begin_src elisp
+(use-package cider
+  :straight t)
+#+end_src
 ** Projectile
 #+begin_src elisp
 (use-package projectile
   :straight t
-  :config 
+  :config
   (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
   (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
   (setq projectile-track-known-projects-automatically nil)
@@ -1050,4 +1156,25 @@ Alerts for emails
   :straight t
   :config
   (persistent-scratch-setup-default))
+#+end_src
+
+** Esup
+Profiling.
+#+begin_src elisp
+(use-package esup
+  :straight t
+  :config
+  ;; don't try to follow symlinks in straight.el repos
+  (setq esup-depth 0)
+  (setq esup-user-init-file (file-truename "~/.emacs.d/init.el")))
+#+end_src
+
+** EMMS
+For the music and stuff.
+#+begin_src elisp
+(use-package emms
+  :straight t
+  :config
+  (emms-all)
+  (emms-default-players))
 #+end_src
