Keybinds for more org commands

--- a/init.org
+++ b/init.org
@@ -313,6 +313,8 @@ Make escape quit prompts.
     "oc"  'org-capture
     "oa"  'org-agenda
     "op"  'org-pomodoro
+    "or"  'org-refile
+    "os"  'org-archive-subtree
     "ok"  '(:ignore t :which-key "kanban")
     "oki" 'org-kanban/initialize-at-end
     "oks" 'org-kanban/shift
