Add scheduled for today for inbox capture template

--- a/init.org
+++ b/init.org
@@ -493,7 +493,7 @@ Installing and configuring org-mode:
   (setq org-capture-templates
     '(("t" "Todo [inbox]" entry
       (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-      "* TODO %i%?")
+      "* TODO %i%? \n SCHEDULED: %t")
       ("T" "Tickler" entry
       (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
       "* TODO %i%? \n SCHEDULED: %T")
