--- a/init.org
+++ b/init.org
@@ -526,7 +526,7 @@ Installing and configuring org-mode:
   ;; org habit
   (setq org-habit-show-all-today t
         org-habit-show-habits-only-for-today t
-        ;;org-habit-show-done-always-green t
+        org-habit-show-done-always-green t
         org-habit-graph-column 80
         org-habit-preceding-days 28
         org-habit-following-days 7)
