--- a/init.org
+++ b/init.org
@@ -80,6 +80,7 @@
   - [[#persistent-scratch][Persistent scratch]]
   - [[#esup][Esup]]
   - [[#emms][EMMS]]
+  - [[#elfeed][Elfeed]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -1214,4 +1215,30 @@ For the music and stuff.
   :config
   (emms-all)
   (emms-default-players))
+#+end_src
+
+** Elfeed
+For the sweet RSS (data :scream:) feeds.
+#+begin_src elisp
+(use-package elfeed
+  :straight t)
+#+end_src
+
+Using org-mode to list feeds to track.
+#+begin_src elisp
+(use-package elfeed-org
+  :straight t
+  :config
+  (elfeed-org)
+  (setq rmh-elfeed-org-files (list "~/.emacs.d/elfeed.org")))
+#+end_src
+
+Elfeed dashboard similar to mu4e one.
+#+begin_src elisp
+(use-package elfeed-dashboard
+  :load-path "~/.emacs.d/lisp/elfeed-dashboard/"
+  :config (progn
+            (setq elfeed-dashboard-file "~/.emacs.d/lisp/elfeed-dashboard/elfeed-dashboard.org")
+             ;; to update feed counts automatically
+            (advice-add 'elfeed-search-quit-window :after #'elfeed-dashboard-update-links)))
 #+end_src
