Some more keybinds, remove peep-dired

--- a/init.org
+++ b/init.org
@@ -80,7 +80,6 @@
   - [[#persistent-scratch][Persistent scratch]]
   - [[#esup][Esup]]
   - [[#emms][EMMS]]
-  - [[#peep-dired][Peep dired]]
   - [[#elfeed][Elfeed]]
 
 ** Package manager
@@ -350,6 +349,8 @@ General keybindings
     "hd" 'howdoyou-query
 
     "x"   '(:ignore t :which-key "buffer")
+    "xl"  'previous-buffer
+    "xh"  'next-buffer
     "xk"  'kill-buffer
     "xs"  '(:ignore t :which-key "split-window")
     "xsr" 'split-window-right
@@ -359,7 +360,10 @@ General keybindings
 
     "re"  'restart-emacs
 
-    "eli" 'ielm))
+    "eli" 'ielm
+
+    "d" '(:ignore t :which-key "dired")
+    "dd" 'dired))
 #+end_src
 ** Margins
 #+begin_src elisp
@@ -1216,16 +1220,6 @@ For the music and stuff.
   :config
   (emms-all)
   (emms-default-players))
-#+end_src
-
-** Peep dired
-To view previews of files in dired
-#+begin_src elisp
-(use-package peep-dired
-  :straight t
-  :defer t ; don't access `dired-mode-map' until `peep-dired' is loaded
-  :bind (:map dired-mode-map
-              ("E" . peep-dired)))
 #+end_src
 
 ** Elfeed
