--- a/init.org
+++ b/init.org
@@ -152,25 +152,33 @@ This is seriously retarded.
 *** Set the theme
 Ok I like the doom emacs themes
 #+begin_src elisp
-(use-package doom-themes
+;; (use-package doom-themes
+;;   :straight t
+;;   :config
+;;   ;; Global settings (defaults)
+;;   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+;;         doom-themes-enable-italic t) ; if nil, italics is universally disabled
+;;   (load-theme 'doom-dracula t)
+
+;;   ;; Enable flashing mode-line on errors
+;;   (doom-themes-visual-bell-config)
+
+;;   ;; Enable custom neotree theme (all-the-icons must be installed!)
+;;   (doom-themes-neotree-config)
+;;   ;; or for treemacs users
+;;   (setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
+;;   (doom-themes-treemacs-config)
+
+;;   ;; Corrects (and improves) org-mode's native fontification.
+;;   (doom-themes-org-config))
+#+end_src
+
+Challenger deep theme
+#+begin_src elisp
+(use-package challenger-deep-theme
   :straight t
   :config
-  ;; Global settings (defaults)
-  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-        doom-themes-enable-italic t) ; if nil, italics is universally disabled
-  (load-theme 'doom-dracula t)
-
-  ;; Enable flashing mode-line on errors
-  (doom-themes-visual-bell-config)
-
-  ;; Enable custom neotree theme (all-the-icons must be installed!)
-  (doom-themes-neotree-config)
-  ;; or for treemacs users
-  (setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
-  (doom-themes-treemacs-config)
-
-  ;; Corrects (and improves) org-mode's native fontification.
-  (doom-themes-org-config))
+  (load-theme 'challenger-deep t))
 #+end_src
 *** No scrollbar, toolbar, menubar, because bloat
 #+begin_src elisp
@@ -362,6 +370,10 @@ General keybindings
     "re"  'restart-emacs
 
     "eli" 'ielm
+
+    "ed"  '(:ignore t :which-key "elfeed-dashboard")
+    "edd" 'elfeed-dashboard
+    "edi" 'elfeed-dashboard-edit
 
     "d" '(:ignore t :which-key "dired")
     "dd" 'dired))
@@ -590,7 +602,7 @@ The notes (zettelkasten) god
 #+begin_src elisp
 (use-package org-roam
   :straight
-  (:host github :repo "jethrokuan/org-roam" :branch "master")
+  (:host github :repo "org-roam/org-roam" :branch "master")
   :hook
   (after-init . org-roam-mode)
   :custom
